samples/_failures_safe/1761083569_10e802_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe29b41c.c: In function ‘main’:
./samples/SAFE/__tmp_fe29b41c.c:168: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_fe29b41c.c:167:5: error: expected declaration or statement at end of input
  167 |     if
      |     ^~
